# ledger-one

./: .env.example  .env.test.example  .gitignore  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: digest.yml  pull.yml
config/: categories.yaml.example
ledger_one/: categorize.py  config.py  db.py  import_copilot.py  normalize.py  pull.py  simplefin.py
references/: copilot_export.md  deploy_cron.md  extending.md  neon_setup.md  querying_data.md  simplefin_setup.md
scripts/: claim_token.py  import_copilot.py  ledger_cli.py  pull.py  schema.sql
scripts/migrations/: 2026-04-19-add-pending.sql
tests/: conftest.py  test_categorize.py  test_claim_token.py  test_config.py  test_db.py  test_import_copilot.py  test_learn_trigger.py  test_ledger_cli.py  test_normalize.py  test_pull.py  test_simplefin.py
tests/fixtures/: copilot_sample.csv  simplefin_response.json
